[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/boyQuizSprites/answersPanel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/boyGameSprites/glucoseMeter.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/boyGameSprites/hipoMessage.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/boyGameSprites/hyperglicemyaPanel.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/boyGameSprites/insulinButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/boyGameSprites/boyGameScene.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/boyGameSprites/transparentPanel.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/boyGameSprites/boy.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/boyGameSprites/exerciseButton.png" type="Texture" id=9]
[ext_resource path="res://Scenes/girlScenes/girlGameScene.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sprites/boyGameSprites/pauseButton.png" type="Texture" id=11]
[ext_resource path="res://Scripts/boyGame.gd" type="Script" id=12]

[node name="Root" instance=ExtResource( 10 )]
script = ExtResource( 12 )

[node name="background" parent="." index="0"]
texture = ExtResource( 6 )

[node name="qtePopup" parent="." index="8"]
texture = ExtResource( 4 )

[node name="spriteLabel" parent="exerciseButtonScene" index="0"]
texture = ExtResource( 1 )

[node name="insulinButtonScene" parent="." index="10"]
visible = false

[node name="spriteLabel" parent="insulinButtonScene" index="0"]
texture = ExtResource( 1 )

[node name="spriteLabel" parent="doNothingButtonScene" index="0"]
texture = ExtResource( 1 )

[node name="backgroundAux" parent="." index="12"]
texture = ExtResource( 7 )

[node name="girlSprite" parent="." index="13"]
texture = ExtResource( 8 )

[node name="glucoseMeter" parent="." index="14"]
texture = ExtResource( 2 )

[node name="insulinSprite" parent="bonusButton" index="0"]
texture = ExtResource( 5 )

[node name="Sprite" parent="PauseButton" index="0"]
texture = ExtResource( 11 )

[node name="exerciseSprite" parent="exerciseButton" index="0"]
texture = ExtResource( 9 )

[node name="exerciseSpriteAux" parent="." index="18"]
texture = ExtResource( 9 )

[node name="warningMessage" parent="." index="23"]
texture = ExtResource( 3 )
